force-app/main/default/objects/Opportunity/fields/Financing_Message__c.field-meta.xml
<CustomField>
    <fullName>Financing_Message__c</fullName>
    <label>Financing Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>