force-app/main/default/objects/Opportunity/fields/Financing_Reference__c.field-meta.xml
<CustomField>
    <fullName>Financing_Reference__c</fullName>
    <label>Financing Reference</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <description>Application Id returned by the financing provider.</description>
</CustomField>