force-app/main/default/objects/Opportunity/fields/Financing_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Financing_Term_Months__c</fullName>
    <label>Financing Term (Months)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>